# calc-microservice

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci-self-hosted.yml  ci.yml  env.yml  slug.yaml  (+1 more)
calc-api/: .gitignore  Dockerfile  README.md  index.ts  package-lock.json  package.json  tsconfig.json
calc-api-dotnet/: .dockerignore  CalcApi.sln  Dockerfile
calc-api-nest/: package.json  pnpm-lock.yaml
calc-documentation/: catalog-info.yaml
calc-interfaces/: README.md  index.ts  package-lock.json  package.json
calc-jobs-queue/: README.md  elasticmq.conf
calc-web/: Dockerfile  README.md  jest.config.js  package-lock.json  package.json
calc-web-next/: .dockerignore  .gitignore  Dockerfile  Dockerfile.playwright  jest.config.js  jest.setup.js  package-lock.json  package.json  playwright-ct.config.ts
calc-web-svelte/: .dockerignore  Dockerfile  package-lock.json  package.json  svelte.config.js  vite.config.ts.js
calc-worker/: .gitignore  .mocharc.json  Dockerfile  README.md  index.ts  package-lock.json  package.json  tsconfig.json
calc-worker-dotnet/: .dockerignore  CalcWorker.sln  Dockerfile
calc-worker-rust/: Cargo.toml  Dockerfile
calc-worker-rust/src/: api.rs  calc.rs  config.rs  env.rs  json.rs  main.rs  queue.rs
chart/: Chart.yaml  values.yaml
integration-test/: docker-compose.yml  package-lock.json  package.json
k8s/: calc-web.yaml
kompose/: calc-api-deployment.yaml  calc-api-service.yaml  calc-queue-deployment.yaml  calc-queue-service.yaml  calc-web-deployment.yaml  calc-web-service.yaml  calc-worker-deployment.yaml
(+126 files in other folders)
