[package]
name = "calc-worker-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "*"
aws-config = "0.3.0"
aws-sdk-sqs = "0.3.0"
aws-smithy-http = "*"
aws-types = "*"
chrono = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
http = "*"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "*"

[dev-dependencies]
test-case = "1.2.1"